TrailORG/src/objects/Survey_Request__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Started_date__c</fullName>
        <label>Stop Started date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Stop_Duration_in_days__c</fullName>
        <label>Total Stop Duration in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Request</label>
    <nameField>
        <label>Survey Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>